--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
-.error-message {
-  color: #ff6565;
-  padding: 0.5em 0.2em;
-  height: 1em;
-  position: absolute;
-  font-size: 0.8em;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
